objects/CMPL123__RAR_Target_User_Test_object__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__RAR_Target_Test_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RAR Target Test Object</label>
        <referenceTo>CMPL123__RAR_Target_Test_Object__c</referenceTo>
        <relationshipLabel>RAR Target User Test objects</relationshipLabel>
        <relationshipName>RAR_Target_User_Test_objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Test_Field__c</fullName>
        <label>Test Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RAR_Target_User_Test_objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RAR Target User Test object</label>
    <nameField>
        <label>RAR Target User Test object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAR Target User Test objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>